fix : text-align default

--- a/src/components/SignModal/SignInModal/SignInModal.scss
+++ b/src/components/SignModal/SignInModal/SignInModal.scss
@@ -20,7 +20,6 @@
     .find-and-signup-container {
       &__find-account-btn {
         color: $GRAY_96;
-        text-align: start;
       }
       &__signup-btn {
         color: $GRAY_96;
